--- a/Romanian/main/Calendar.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/strings.xml
@@ -12,7 +12,6 @@
     <string name="accounts">Conturi şi sincronizare</string>
     <string name="acct_not_synced">Acest cont nu este sincronizat, prin urmare calendarele dvs. pot să nu fie actualizate.</string>
     <string name="acessibility_selected_marker_description">Eveniment selectat</string>
-    <string name="action_label">Revocare</string>
     <string name="action_text_card_manager">Canal</string>
     <string name="action_text_today">Astăzi</string>
   <string name="ad_card_connecting">conexiune</string>
@@ -77,15 +76,12 @@
     <string name="card_detail_dialog_title">Vă abonați acum?</string>
     <string name="card_detail_hint">Conținutul va fi afișat în pagina principală și se va actualiza zilnic după ce vă veți abona</string>
     <string name="card_detail_title">Detalii</string>
-    <string name="card_manager">Gestionare abonări</string>
+    <string name="card_manager">Gestionați abonările</string>
     <string name="card_manager_no_data">Nicio abonare încă</string>
     <string name="card_title_change">Mai multe</string>
     <string name="change_response_title">Modificaţi răspunsul</string>
   <string name="check_reminded_text">Vezi memento-uri</string>
   <string name="chinese_leap">Intercalare</string>
-    <string name="chips_action_cancel">Renunțați</string>
-    <string name="chips_action_copy">Copiați</string>
-    <string name="chips_permission_text">Permiteți sugerarea de persoane din agendă</string>
   <string name="chongsha">Fantome</string>
     <string name="copy_email">Copiaţi adresa de e-mail</string>
     <string name="copy_number">Copiaţi numărul de telefon</string>
@@ -129,13 +125,13 @@
     <string name="date_interval_text_to">Până la %1$s</string>
   <string name="date_pattern_mm_dd">luna M ziua d</string>
     <string name="date_time_fmt" formatted="false">%s, %s</string>
-    <string name="date_today">(astăzi)</string>
-    <string name="day_view_new_event_hint">Eveniment nou</string>
+    <string name="date_today">" (astăzi)"</string>
+    <string name="day_view_new_event_hint">+ Eveniment nou</string>
     <string name="default_reminder_mode">Memento-uri</string>
     <string name="delete_calendar">Dezabonare</string>
     <string name="delete_recurring_event_title">Ştergeţi %s?</string>
     <string name="delete_this_event_title">Ştergeţi acest eveniment?</string>
-    <string name="deleting_calendar">Dezabonare</string>
+    <string name="deleting_calendar">Dezabonare…</string>
     <string name="departure">Plecare</string>
     <string name="description_calendar">Aplicații de sistem/Calendar</string>
     <string name="description_calendar_edit_event">Aplicații de sistem/Calendar/Agendă</string>
@@ -144,15 +140,15 @@
     <string name="directory_searching_fmt">Se caută %s…</string>
     <string name="discard_label">Anulaţi</string>
     <string name="does_not_repeat">Eveniment unic</string>
+    <string name="done">Înapoi</string>
     <string name="download">Descărcați</string>
   <string name="download_finished">Descărcare finalizată</string>
   <string name="downloaded">Descărcat</string>
   <string name="downloading">Descărcați</string>
   <string name="downloading_wallpaper">Imagine de fundal</string>
-    <string name="dropdown_delete_button_desc">Eliminați %s din lista de destinatari</string>
     <string name="edit_date_calculate_days_backward_error_hint">"Nu se poate calcula înainte"</string>
     <string name="edit_date_calculate_days_empty_hint">Introduceți numărul de zile</string>
-    <string name="edit_date_calculate_days_error_hint">Introduceți zilele până la %1$d</string>
+    <string name="edit_date_calculate_days_error_hint">Puteți introduce până la %1$d zile</string>
     <string name="edit_date_calculate_days_forward_error_hint">"Nu se poate calcula înapoi"</string>
     <string name="edit_event_all_day_label">Toată ziua</string>
     <string name="edit_event_anniversary_name_empty_hint">Introduceți numele evenimentului</string>
@@ -229,8 +225,8 @@
     <string name="from_google_group_calendar">Calendar Google</string>
     <string name="gadget_no_events">Niciun eveniment viitor în calendar</string>
     <string name="gadget_title">Calendar</string>
-    <string name="global_action_text_card_manager">Un calendar mult mai interesant</string>
-    <string name="global_cricket_no_match">Nu există nicio competiție de cricket astăzi; puteți revizui rezultatele meciurilor anterioare sau să încercați alt meci. E un eveniment minunat ce merită așteptarea!</string>
+    <string name="global_action_text_card_manager">Mai multe categorii</string>
+    <string name="global_cricket_no_match">Nu există nicio competiție de cricket astăzi. Vedeți celelalte zile.</string>
     <string name="global_onthisday_com">OnThisDay.com</string>
     <string name="guide_card_hint_text">Importați zilele de naștere din Agendă</string>
     <string name="hint_attendees">Invitaţi</string>
@@ -324,9 +320,9 @@
     <string name="month_view">Lună</string>
     <string name="monthly">Lunar</string>
     <string name="monthly_on_day">Lunar (în aceeași zi)</string>
-    <string name="monthly_on_day_count">Lunar (%1$s zi de %2$s)</string>
+    <string name="monthly_on_day_count">Lunar (%1$s zi de %2$s din fiecare lună)</string>
   <string name="more_match">Mai multe evenimente</string>
-    <string name="more_string">+%1$d</string>
+    <string name="more_string">+%1$s</string>
     <string name="network_not_available">"Nu se poate conecta la rețea"</string>
     <string name="new_event_dialog_label">Eveniment nou</string>
     <string name="new_event_dialog_option">Eveniment nou</string>
@@ -343,6 +339,27 @@ Verificați setările de rețea și încercați din nou."</string>
   <string name="olympic_total">Total</string>
   <string name="olympic_vs">VS</string>
   <string name="online_reminder_header_text">Memento</string>
+  <string name="panchang_amanta">Amanta</string>
+  <string name="panchang_amanta_month">Amanta Month:</string>
+  <string name="panchang_ayana">Ayana</string>
+  <string name="panchang_gulikai_kalam">Gulikai Kalam</string>
+  <string name="panchang_hindu_lunar_month">Hindu Lunar Month</string>
+  <string name="panchang_inauspicious_timings">Inauspicious Timings</string>
+  <string name="panchang_karan">Karan</string>
+  <string name="panchang_moon_sign">Moon Sign</string>
+  <string name="panchang_nakshatra">Nakshatra</string>
+  <string name="panchang_purnimanta">Purnimanta</string>
+  <string name="panchang_purnimanta_month">Purnimanta Month:</string>
+  <string name="panchang_rahu_kalam">Rahu Kalam</string>
+  <string name="panchang_ritu">Ritu</string>
+  <string name="panchang_shaka_samvat">Shaka Samvat</string>
+  <string name="panchang_sun_sign">Sun Sign</string>
+  <string name="panchang_tithi">Tithi</string>
+  <string name="panchang_to"> to </string>
+  <string name="panchang_upto"> upto </string>
+  <string name="panchang_vikram_samvat">Vikram Samvat</string>
+  <string name="panchang_yamaghanta">Yamaghanta</string>
+  <string name="panchang_yog">Yog</string>
     <string name="path_calendar_settings">Aplicații de sistem/Calendar/Setări</string>
   <string name="pengzu">Ciupire</string>
     <string name="prefDialogTitle_vibrateWhen">Vibrare</string>
@@ -473,6 +490,10 @@ Puteți adăuga, de asemenea, memento-uri pentru a nu rata nimic important."</st
     <string name="today_train_event">Tren</string>
     <string name="tomorrow">Mâine</string>
     <string name="tomorrow_at_time_fmt">Mâine la %s</string>
+    <string name="too_long_content">Conținutul este prea lung</string>
+    <string name="too_long_description">Descrierea evenimentului este prea lungă</string>
+    <string name="too_long_location">Locația evenimentului este prea lungă</string>
+    <string name="too_long_name">Numele este prea lung</string>
     <string name="travel_airport">Aeroport</string>
     <string name="travel_carriage_number_text">Automobil</string>
     <string name="travel_eta_advice">%2$s minute cu automobilul la %1$s.</string>
