--- a/Romanian/main/MiGalleryLockscreen.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiGalleryLockscreen.apk/res/values-ro/strings.xml
@@ -12,6 +12,22 @@
     <string name="carousel_suggest">Atenție</string>
     <string name="carousel_suggest1">Obțineți imagini noi de fundal direct pe Ecranul de blocare în fiecare zi, în mod gratuit.</string>
     <string name="carousel_suggest2">Este activat Caruselul de imagini de fundal?</string>
+    <string name="cat_1">Orașe</string>
+    <string name="cat_10">Natură</string>
+    <string name="cat_11">Tehnologie</string>
+    <string name="cat_12">Artă</string>
+    <string name="cat_13">Mâncare</string>
+    <string name="cat_14">Actori</string>
+    <string name="cat_15">Actrițe</string>
+    <string name="cat_16">Fete</string>
+    <string name="cat_2">Ilustrații</string>
+    <string name="cat_3">Interioare</string>
+    <string name="cat_4">Sport</string>
+    <string name="cat_5">Pop</string>
+    <string name="cat_6">Persoane</string>
+    <string name="cat_7">Mașini</string>
+    <string name="cat_8">Stiință</string>
+    <string name="cat_9">Modă</string>
     <string name="change_time">Modifică imaginile de fundal</string>
     <string name="confirm">Activați</string>
     <string name="current_connection_invalid">Așteptați ca telefonul să se conecteze la rețea</string>
@@ -24,7 +40,7 @@
     <string name="declaration_lockscreen_title">Obțineți imagini noi de fundal în fiecare zi</string>
     <string name="declaration_title">Termeni și Condiții de utilizare</string>
     <string name="dislike">Ștergeți</string>
-    <string name="from_migallerylockscreen"/>
+    <string name="from_migallerylockscreen">Din Caruselul de imagini de fundal MIUI</string>
     <string name="hour_1">În fiecare oră</string>
     <string name="hour_3">La fiecare 3 ore</string>
     <string name="like">Adăugați la Favorite</string>
@@ -43,11 +59,11 @@
     <string name="ok_international">De acord și activez</string>
     <string name="ok_lockscreen">Activați</string>
     <string name="ok_network">Sunt de acord</string>
-    <string name="platform_unavailable_qq">Instalați aplicația Viber</string>
-    <string name="platform_unavailable_qzone">Instalați aplicația WhatsApp</string>
-    <string name="platform_unavailable_wechat">Instalați aplicația Wechat</string>
-    <string name="platform_unavailable_wechatmoment">Instalați aplicația Wechat</string>
-    <string name="platform_unavailable_weibo">Instalați aplicația Telegram</string>
+    <string name="platform_unavailable_qq">Instalați aplicația VK</string>
+    <string name="platform_unavailable_qzone">Instalați aplicația Telegram</string>
+    <string name="platform_unavailable_wechat">Instalați aplicația WeChat</string>
+    <string name="platform_unavailable_wechatmoment">Instalați aplicația WeChat</string>
+    <string name="platform_unavailable_weibo">Instalați aplicația WhatsApp</string>
     <string name="resource_apply">Aplică</string>
     <string name="resource_no_network_text">Verificați conexiunea la rețea și reîncercați</string>
     <string name="select_package">Selectați versiunea</string>
