--- a/Romanian/main/Updater.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Updater.apk/res/values-ro/strings.xml
@@ -170,15 +170,26 @@
     <string name="pm_root_success_title">Acces root activat</string>
     <string name="previous">Înapoi</string>
     <string name="progress_title_checking">Verificare pentru actualizări…</string>
+    <string name="provision_activate_device">Activare dispozitiv…</string>
+    <string name="provision_check_sim">Detectare cartelă SIM</string>
+    <string name="provision_connect_wifi">Conectați-vă la Wi-Fi</string>
+    <string name="provision_have_sim">Cartelă SIM inserată</string>
+    <string name="provision_no_network_extra">Conectați-vă la Wi-Fi sau introduceți cartela SIM și utilizați datele mobile pentru a vă activa dispozitivul. Nu vă puteți activa dispozitivul fără să vă conectați la rețea.</string>
+    <string name="provision_no_network_title">Conectați-vă la rețea</string>
+    <string name="provision_retry">Încercați din nou</string>
+    <string name="provision_toast_no_network">Conectați-vă la rețea mai întâi</string>
+    <string name="provision_toast_server_error">Nu s-a putut conecta la server. Așteptați un minut sau două și reîncercați.</string>
+    <string name="provision_toast_timeout">Timpul de conectare a expirat. Verificați setările de rețea.</string>
     <string name="reboot">Reporniţi</string>
     <string name="recovery_failed_button">OK</string>
     <string name="recovery_failed_msg">"Dispozitivul nu are suficientă memorie pentru a intra în modul Recuperare și pentru a actualiza sistemul dvs. Încercați să folosiți Mi PC Suite:
 http://zhushou.xiaomi.com"</string>
     <string name="recovery_failed_notification_msg">Nu se poate intra în modul Recuperare</string>
     <string name="recovery_failed_title">Utilizaţi Mi PC Suite pentru a actualiza sistemul</string>
-    <string name="recovery_power_not_enough_msg">Dacă aveţi disponibil mai puţin de 30% din acumulator trebuie să conectaţi încărcătorul pentru a putea actualiza</string>
-    <string name="recovery_power_not_enough_msg_plugged">Acumulatorul trebuie sa aibă mai mult de 30% disponibil pentru a putea actualiza dispozitivul</string>
+    <string name="recovery_power_need_plugged">Conectați încărcătorul pentru a putea actualiza</string>
+    <string name="recovery_power_not_enough_msg">Acumulatorul trebuie să aibă cel puțin 15% disponibil pentru a putea actualiza</string>
     <string name="recovery_power_not_enough_title">Acumulator descărcat</string>
+    <string name="recovery_power_plugged_warning">Asigurați-vă că încărcătorul este conectat pe durata actualizării</string>
     <string name="repeat">Reîncercaţi</string>
     <string name="root_acquired">Permiteți acces root</string>
     <string name="root_agree_check_box_title">Înțeleg riscurile accesului root</string>
@@ -200,12 +211,12 @@ http://zhushou.xiaomi.com"</string>
     <string name="share_update">Distribuiţi informaţia despre actualizare</string>
     <string name="share_update_content_sign">Am actualizat MIUI la %1$s! Starea actualizărilor mele este %2$s. Pentru jurnalul detaliat al schimbărilor, accesaţi %3$s</string>
     <string name="share_update_content_unsign">Am actualizat MIUI la %1$s! Pentru jurnalul detaliat al schimbărilor, accesaţi %2$s</string>
-    <string name="sina_share_fail">Trimitere eşuată</string>
-    <string name="sina_share_fail_content_repeat">Nu se poate partaja, conținut existent…</string>
+    <string name="sina_share_fail">"Nu s-a putut trimite"</string>
+    <string name="sina_share_fail_content_repeat">"Ați partajat deja acest conținut"</string>
     <string name="sina_share_pendding">Trimitere…</string>
     <string name="sina_share_success">Trimis</string>
-    <string name="sina_token_expired_warning">Cont Weibo expirat, reconectaţi-vă</string>
-    <string name="sina_token_invalid_warning">Cont Weibo nevalid, reconectaţi-vă</string>
+    <string name="sina_token_expired_warning">Cont Weibo expirat; adăugați contul din nou</string>
+    <string name="sina_token_invalid_warning">Cont Weibo nevalid; adăugați contul din nou</string>
     <string name="sogou_uninstall_msg">Tastatura Sogou (Mi Edition) nu mai este compatibilă cu MIUI 7. Alegeți altă tastatură sau actualizați Sogou la o nouă versiune.</string>
     <string name="sogou_uninstall_negative_button">Actualizați Sogou</string>
     <string name="sogou_uninstall_positive_button">Alegeți altă tastatură</string>
@@ -218,7 +229,6 @@ http://zhushou.xiaomi.com"</string>
     <string name="submit_progress">Trimitere…</string>
     <string name="submit_success">Trimis</string>
     <string name="test">Test</string>
-    <string name="timer_title">Dispozitivul va reporni în %d secunde.</string>
     <string name="title_toast_auto">Dispozitivul va reporni în</string>
     <string name="toast_delay_update_tonight">Telefonul va aplica actualizările între 2:00 AM și 5:00 AM</string>
     <string name="top_secret_build">Top-secret</string>
