--- a/Romanian/main/Contacts.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Contacts.apk/res/values-ro/strings.xml
@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="accessibility_calllog_detail">Detalii jurnal apeluri</string>
+    <string name="accessibility_contact_detail">Detalii contact</string>
     <string name="account_container_title">Importat din</string>
     <string name="account_default">Telefon</string>
     <string name="account_phone">Numai pe telefon, nesincronizat</string>
@@ -87,7 +88,9 @@
     <string name="call_radio">Apelaţi un număr radio</string>
     <string name="call_record_setting_miui">Setări înregistrare</string>
     <string name="call_settings">Setări</string>
+    <string name="call_sim1_description">SIM 1</string>
     <string name="call_sim1_menu_title">Apelaţi prin SIM1</string>
+    <string name="call_sim2_description">SIM 2</string>
     <string name="call_sim2_menu_title">Apelaţi prin SIM2</string>
     <string name="call_sim_menu_title_suffix">(Principal)</string>
     <string name="call_telex">Apelaţi un număr de telex</string>
@@ -130,7 +133,6 @@
     <string name="callrecordview_menu_mobiledata">Achiziționare date mobile</string>
     <string name="callrecordview_menu_paste">Lipire</string>
     <string name="callrecordview_menu_recharge">Suplinire</string>
-    <string name="callrecordview_menu_save_to_group">Salvați istoricul apelurilor de grup</string>
     <string name="callrecordview_menu_settings">Setări</string>
     <string name="callrecordview_menu_show">Filtru</string>
     <string name="callrecordview_menu_show_accepted">Apelurile preluate</string>
@@ -141,8 +143,6 @@
     <string name="callrecordview_menu_show_sim">Apeluri %s</string>
     <string name="callrecordview_menu_show_stranger">Apelurile de la numere necunoscute</string>
     <string name="callrecordview_menu_show_title">Afişare jurnal apeluri</string>
-    <string name="callrecordview_menu_voip">Mi Voice</string>
-    <string name="calls_voip_prompt">VoIP</string>
     <string name="cancel_confirmation_dialog_message">Renunţaţi la modificări?</string>
     <string name="cancel_confirmation_dialog_title">Anulaţi</string>
     <string name="cancel_export_confirmation_message">Anulaţi exportul fişierului %s?</string>
@@ -168,7 +168,7 @@
     <string name="clearFrequentsProgress_title">Ştergere persoane frecvent contactate…</string>
     <string name="clear_copy_number_description">Ștergeți numărul copiat</string>
     <string name="clear_default">Ştergeţi datele prestabilite</string>
-    <string name="clear_digits">Ştergeţi numărul</string>
+    <string name="clear_digits">Ştergeţi numărul de telefon</string>
     <string name="click_close">Atingeţi pentru a închide</string>
     <string name="clip_dialog_title">Apelaţi numărul copiat?</string>
     <string name="close_dial_pad">Închideţi tastatura numerică</string>
@@ -205,7 +205,8 @@
     <string name="contactPickerActivityTitle">Alegeţi un contact</string>
     <string name="contactSavedErrorToast">Nu s-au putut salva modificările făcute contactului</string>
     <string name="contactSavedToast">Contactul a fost salvat</string>
-    <string name="contact_delete_toast">Contact şters</string>
+    <string name="contact_clear_search_history">Goliți istoricul</string>
+    <string name="contact_delete_toast">Contact şters cu succes</string>
     <string name="contact_detail_action_item_calllog">Istoric apeluri</string>
     <string name="contact_detail_action_item_nocalllog">Nu există istoric</string>
     <string name="contact_detail_calllog_call_note_tips">Note</string>
@@ -249,6 +250,7 @@ Cartelele de contact sunt dezactivate"</string>
     <string name="contact_list_loading">Se încarcă…</string>
     <string name="contact_pick_photo">Fotografii</string>
     <string name="contact_read_only">Nu se poate edita din această aplicaţie</string>
+    <string name="contact_search_history">Istoric</string>
     <string name="contact_status_update_attribution">de pe %1$s</string>
     <string name="contact_status_update_attribution_with_date">La ora %1$s de pe %2$s</string>
     <string name="contact_unfavorite_toast">Eliminat din favorite</string>
@@ -269,7 +271,6 @@ Cartelele de contact sunt dezactivate"</string>
     <string name="create_group_dialog_title">Creaţi un grup nou</string>
     <string name="create_group_item_label">[Creaţi un grup nou]</string>
     <string name="create_qrcode_fail_message">Nu se poate crea codul QR</string>
-    <string name="create_voip_shortcut_success">Widgetul VOIP a fost creat</string>
     <string name="customLabelPickerTitle">Numele etichetei personalizate</string>
     <string name="custom_list_filter">Definiţi afişarea personalizată</string>
     <string name="custom_nickname_hint">Introduceţi pseudonimul</string>
@@ -302,7 +303,10 @@ Cartelele de contact sunt dezactivate"</string>
     <string name="description_add_contact">Adăugaţi un contact în agendă</string>
     <string name="description_call">Apelaţi pe %1$s</string>
     <string name="description_call_log_incoming_call">Apel primit</string>
+    <string name="description_call_log_incoming_forwarding_call">Apel redirecționat primit</string>
     <string name="description_call_log_missed_call">Apel nepreluat</string>
+    <string name="description_call_log_missed_forwarding_call">Apel redirecționat pierdut</string>
+    <string name="description_call_log_new_contact">Contact nou</string>
     <string name="description_call_log_outgoing_call">Apel efectuat</string>
     <string name="description_call_log_play_button">Redaţi mesajul vocal</string>
     <string name="description_call_log_unheard_voicemail">Mesaje vocale neascultate</string>
@@ -360,17 +364,12 @@ Cartelele de contact sunt dezactivate"</string>
     <string name="device_paired_dialog_title">Preluare contacte…</string>
     <string name="device_pairing_dialog_message">Asociere…</string>
     <string name="device_pairing_dialog_title">Asociaţi dispozitivele</string>
-    <string name="device_transfer_by_bluetooth_message">"1. Activați \"Bluetooth\" pe celălalt telefon;
-        
-
+    <string name="device_transfer_by_bluetooth_message">"1. Activați \"Bluetooth\" pe celălalt telefon;        
 - Pe telefoanele cu Android \"Bluetooth\" se găsește de regulă în secțiunea Rețele mobile
         
 - Pe telefoanele cu iOS \"Bluetooth\" se găsește în Setări
-        
-
 2. Pe telefoanele cu Android trebuie activată de asemenea și opțiunea \"Detectare disponibilă pentru celelalte dispozitive\";
         
-
 3. Apăsați \"Următorul\", și acordați permisiunea de accesare contacte când vi se solicită acest lucru."</string>
     <string name="device_transfer_by_sim_message">"1. Salvați contactele de pe celălalt telefon pe cartela SIM;
         
@@ -491,18 +490,15 @@ Motivul: „%s”"</string>
     <string name="groupSavedErrorToast">Nu s-au putut salva modificările făcute grupului</string>
     <string name="groupSavedToast">Grupul a fost salvat</string>
     <string name="group_add_fail_toast">Adăugarea destinatarilor a eşuat</string>
-    <string name="group_copy_fail_toast">"Nu s-au putut copia contactele"</string>
     <string name="group_create_fail_toast">Crearea grupului a eşuat</string>
     <string name="group_create_success_toast">Grup creat</string>
     <string name="group_delete_success_toast">Grup şters</string>
     <string name="group_detail_label_placeholder"> </string>
     <string name="group_edit_field_hint_text">Nume grup</string>
     <string name="group_member_remove_toast">Eliminat din grup</string>
-    <string name="group_move_fail_toast">Nu s-au putut muta contactele"</string>
     <string name="group_name">Grupurile mele</string>
     <string name="group_name_hint">Numele grupului</string>
     <string name="group_read_only">Nu poate fi editat pe acest dispozitiv.</string>
-    <string name="group_remove_success_toast">Contactele au fost mutate cu succes</string>
     <string name="group_rename_dialog_title">Redenumiţi grupul</string>
     <string name="group_rename_fail_toast">Redenumirea grupului a eşuat</string>
     <string name="group_rename_success_toast">Grup redenumit</string>
@@ -570,8 +566,6 @@ Motivul: „%s”"</string>
     <string name="insertContactDescription">Creaţi un contact în agendă</string>
     <string name="insertGroupDescription">Creaţi un grup</string>
     <string name="invalidContactMessage">Contact inexistent</string>
-    <string name="invalid_contacts_excluded_to_save_to_group">Doar contactele cu numere de telefon vor fi salvate în grup</string>
-    <string name="invalid_contacts_to_save_to_group">"Nu se pot salva numerele necunoscute"</string>
     <string name="keep_local">Nu se sincronizează</string>
     <string name="keep_local_btn">Utilizaţi stocarea internă a telefonului</string>
     <string name="label_custom_type">Personalizat</string>
@@ -624,10 +618,6 @@ Motivul: „%s”"</string>
     <string name="menu_accounts">Conturi</string>
     <string name="menu_addStar">Adăugaţi la lista de favorite</string>
     <string name="menu_bar_group_add">Adăugaţi</string>
-    <string name="menu_bar_group_batch_copy">Copiere în grup</string>
-    <string name="menu_bar_group_batch_edit">Contacte multiple</string>
-    <string name="menu_bar_group_batch_move">Mutare în grup</string>
-    <string name="menu_bar_group_batch_remove">Ștergere grup</string>
     <string name="menu_bar_group_delete">Ştergeţi</string>
     <string name="menu_bar_group_rename">Redenumiţi</string>
     <string name="menu_bar_group_ringtone">Ton de apel</string>
@@ -710,6 +700,7 @@ Motivul: „%s”"</string>
     <string name="miprofile_nick_name_edit_dialog_hint">Introduceți pseudonimul</string>
     <string name="miprofile_nick_name_edit_dialog_message">Pseudonimul va apărea în istoricul apelurilor și informațiile de profil</string>
     <string name="miprofile_nick_name_edit_dialog_title">Editați pseudonimul</string>
+    <string name="miprofile_notice_close">Închideți</string>
     <string name="miprofile_notice_text">Apăsați pentru a vizualiza fotografia de profil</string>
     <string name="miprofile_request_agenda_date">Această persoană dorește să facă schimb de cartele [%1$s]</string>
     <string name="miprofile_request_agenda_today">Această persoană dorește să facă schimb de cartele [Astăzi %1$s]</string>
@@ -897,14 +888,11 @@ Pentru a adăuga un contact în lista de favorite:
     <string name="percent_sign">%</string>
     <string name="percentage">%s %%</string>
     <string name="phoneLabelsGroup">Telefon</string>
-    <string name="phone_call_type_livetalk">Pachet de suplinire</string>
-    <string name="phone_call_type_voip">Mi Voice</string>
     <string name="phone_info_divider">" ｜ "</string>
     <string name="phone_number_too_long_toast">Numărul este prea lung</string>
     <string name="phone_primary">Principal</string>
     <string name="photoPickerNotFoundText">Nicio fotografie disponibilă în telefon</string>
     <string name="photo_fragment">Fotografie</string>
-    <string name="photo_labels_group">Fotografie de profil</string>
     <string name="photo_load_failed">Nu s-a putut încărca fotografia</string>
     <string name="pick_new_photo">Selectaţi o fotografie nouă din %s</string>
     <string name="pick_photo">Alegeţi o fotografie din %s</string>
@@ -939,8 +927,6 @@ Pentru a adăuga un contact în lista de favorite:
     <string name="pref_key_sim_manage">Configuraţi cartela SIM</string>
     <string name="pref_key_sim_manage1">Configuraţi cartela SIM1</string>
     <string name="pref_key_sim_manage2">Configuraţi cartela SIM2</string>
-    <string name="pref_rcs_backup_restore_title">Setări creare copie de rezervă și restaurare</string>
-    <string name="pref_rcs_fetion_entry_title">Setări Fetion</string>
     <string name="pref_summary_import_from_account">Importaţi contactele din conturile Google şi Exchange în contul dvs. Mi</string>
     <string name="pref_title_account_import">Import în cont</string>
     <string name="pref_title_import_from_account">Import în contul Mi</string>
@@ -990,31 +976,18 @@ Pentru a adăuga un contact în lista de favorite:
     <string name="profileSavedErrorToast">"Nu s-au putut salva modificările profilului meu"</string>
     <string name="profileSavedToast">Profil salvat</string>
     <string name="profile_binded_numbers">%s</string>
+    <string name="profile_delete_toast">Profil șters cu succes</string>
     <string name="profile_display_name">Configuraţi profilul</string>
     <string name="profile_name">Profilul meu</string>
     <string name="profile_name_photo">Fotografie</string>
-    <string name="public_account_name">Cont public</string>
     <string name="pull_to_refresh_pull_label">Trageți pentru a actualiza…</string>
     <string name="pull_to_refresh_refreshing_label">Încărcare…</string>
     <string name="pull_to_refresh_release_label">Eliberați pentru a actualiza…</string>
     <string name="qr_card_card">Cod QR</string>
     <string name="qrcode_card_title">Cod QR</string>
-    <string name="qrcode_detail_menu_edit">Editați codul QR</string>
-    <string name="qrcode_detail_menu_scan">Scanați</string>
-    <string name="qrcode_editor_flash">Codul QR a fost actualizat</string>
-    <string name="qrcode_editor_flash_failed">"Nu s-a putut actualiza codul QR"</string>
     <string name="quickcontact_missing_app">Nu s-a găsit o aplicaţie care să gestioneze această acţiune</string>
     <string name="quit_dialog_confirm_message">Nu aţi îmbinat niciun contact</string>
     <string name="quit_dialog_confirm_title">Anulaţi îmbinarea contactelor</string>
-    <string name="rcs_account_type_title">Cont Fetion</string>
-    <string name="rcs_contact_detail_profile_binded_label">Contul actual Fetion</string>
-    <string name="rcs_fetion_not_exist">"Nu s-a putut găsi plugin-ul Fetion"</string>
-    <string name="rcs_group_chat_name">Chat în grup</string>
-    <string name="rcs_profile_name">CArdul meu Fetion</string>
-    <string name="rcs_profile_name_photo">Eu</string>
-    <string name="rcs_recipient_type_contact">Transmite unui contact</string>
-    <string name="rcs_recipient_type_group">Transmite unui grup</string>
-    <string name="rcs_send_vcard">Trimite vCard</string>
     <string name="readOnlyContactDeleteConfirmation">Informaţiile despre acest contact din agendă provin din mai multe conturi. Orice informaţii ce nu pot fi şterse vor fi ascunse în lista contactelor.</string>
     <string name="readOnlyContactDeleteConfirmationDetail">\"%s\" conţine informaţii din conturi multiple. Informaţiile provenite din conturile \"doar în citire\" vor fi ascunse în lista contactelor.</string>
     <string name="readOnlyContactWarning">Nu puteţi şterge contacte din agendă, din conturi cu permisiuni doar de citire, însă puteţi să le ascundeţi în lista dvs. de contacte.</string>
@@ -1247,7 +1220,6 @@ Alegeţi una dintre următoarele opţiuni:"</string>
     <string name="vcard_import_request_rejected_message">Solicitarea de importare a fişierului vCard a fost respinsă. Încercaţi din nou mai târziu.</string>
     <string name="vcard_import_will_start_message">%s va fi importat în curând.</string>
     <string name="vcard_import_will_start_message_with_default_name">Fişierul va fi importat în scurt timp.</string>
-    <string name="vcard_info_send_error">"Nu s-a putut trimite din cauza unei erori vCrad"</string>
     <string name="vcard_unknown_filename">contact</string>
     <string name="video_call">Apel video</string>
     <string name="video_chat">Chat video</string>
@@ -1271,12 +1243,6 @@ Alegeţi una dintre următoarele opţiuni:"</string>
     <string name="voicemail_status_messages_waiting">Nu se conectează la serverul de mesagerie vocală. Aşteaptă mesaje noi.</string>
     <string name="voicemail_status_voicemail_not_available">Nu se poate realiza conectarea la serverul de mesagerie vocală.</string>
     <string name="voip_audio_description">Apăsați pentru apelare VOIP</string>
-    <string name="voip_contact_label">Mi Voice</string>
-    <string name="voip_contacts_entry">Mi Voice</string>
-    <string name="voip_loading_contact">Doar o secundă…</string>
-    <string name="voip_name">Mi Voice</string>
-    <string name="voip_recommend_msg">Apăsați pentru a utiliza Mi Voice</string>
-    <string name="voip_shortcut_name">Mi Voice</string>
     <string name="voip_video_description">Apăsați pentru apelare video VOIP</string>
     <string name="websiteLabelsGroup">Site web</string>
     <string name="widget_name_and_phonetic">%1$s (%2$s)</string>
@@ -1295,8 +1261,7 @@ Alegeţi una dintre următoarele opţiuni:"</string>
     <string name="yellowpage_navigation_search_history">Istoricul căutărilor</string>
     <string name="yellowpage_navigation_search_offline_hint">Sunteţi off-line</string>
     <string name="yellowpage_navigation_search_result_average_price">Medie RMB %d</string>
-    <string name="yellowpage_navigation_search_result_network_error">"Nu s-a putut conecta
-          la rețea"</string>
+    <string name="yellowpage_navigation_search_result_network_error">"Nu s-a putut conecta la rețea"</string>
     <string name="yellowpage_navigation_search_result_no_more">Nu mai sunt rezultate</string>
     <string name="yellowpage_navigation_search_result_service_error">Serviciu indisponibil</string>
     <string name="yellowpage_navigation_search_result_unknown_error">Eroare necunoscută</string>
