--- a/Romanian/main/PowerKeeper.apk/res/values-ro/strings.xml
+++ b/Romanian/main/PowerKeeper.apk/res/values-ro/strings.xml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+    <string name="about_hide_mode">Despre Economisirea acumulatorului MIUI</string>
     <string name="action_bar_delete">Ştergeţi</string>
     <string name="action_settings">Setări</string>
     <string name="activity_title_poweranalyze">Testare acumulator</string>
@@ -25,12 +26,17 @@
     <string name="config_restrict_function_title">Restricționați aplicațiile din fundal</string>
     <string name="config_restrict_running_description">Aplicațiile vor fi închise pentru a economisi acumulatorul</string>
     <string name="config_restrict_running_title">Restricționați activitățile din fundal</string>
+    <string name="config_restrict_running_warning">Aplicația va fi închisă când rulează în fundal; este posibil să nu funcționeze în mod corect</string>
+    <string name="config_scenario_policies_title">Scenarii</string>
     <string name="config_suggest_description">"Identificați aplicațiile și activitățile pentru a se păstra în funcțiune procesele importante.
 Economisirea acumulatorului va trata selectiv aplicațiile importante."</string>
     <string name="config_suggest_suffix_title">Economisire acumulator MIUI(recomandat)</string>
     <string name="config_suggest_title">Economisire acumulator MIUI</string>
+    <string name="disable_hide_mode">Dezactivați Economisirea acumulatorului MIUI</string>
+    <string name="disable_hide_mode_warning">Dezactivarea Economisirii acumulatorului MIUI poate cauza un consum crescut de energie</string>
     <string name="disabled">Dezactivat</string>
     <string name="empty_title_apps_container_list">Nicio aplicaţie</string>
+    <string name="enable_hide_mode">Activați Economisirea acumulatorului MIUI</string>
     <string name="error_filename_too_long">Numele de fișier introdus este prea lung.</string>
     <string name="foreground_change">Aplicaţia se execută în prim-plan</string>
     <string name="fragment_nonesys_listempty">Nicio aplicație instalată</string>
@@ -41,6 +47,7 @@ Economisirea acumulatorului va trata selectiv aplicațiile importante."</string>
     <string name="google_base_app_install_choice">\"%s\" necesită Google Service Framework pentru a rula corespunzător; descărcați și instalați?</string>
     <string name="hide_mode_desc">Atunci când o aplicație rulează în fundal, activitățile sale vor fi monitorizate pentru a reduce utilizarea acumulatorului</string>
     <string name="hide_mode_ultimate_desc">Modul Extrem este activat. Aplicațiile din fundal vor fi înghețate. Dezactivați economisirea acumulatorului pentru a părăsi modul Extrem.</string>
+    <string name="hide_system_app">Ascunde aplicațiile de sistem</string>
     <string name="high">Performanţă</string>
     <string name="hints_loading_text">Doar o secundă…</string>
     <string name="invalid_size_value">"Nu s-a putut obține dimensiunea pachetului."</string>
@@ -90,7 +97,7 @@ Economisirea acumulatorului va trata selectiv aplicațiile importante."</string>
     <string name="power_config_app_background_title">În fundal</string>
     <string name="power_config_app_full_screen_title">Ecran complet</string>
     <string name="power_config_app_launch_title">În prim-plan</string>
-    <string name="power_config_apps">Economisire energie în fundal</string>
+    <string name="power_config_apps">Economisirea acumulatorului MIUI</string>
     <string name="power_config_bg_data_delay_time_dialog_title">Selectați intervalul orar de restricționare a datelor din fundal</string>
     <string name="power_config_bg_data_delay_time_title">Restricționați utilizarea datelor în fundal</string>
     <string name="power_config_choose_apps">Selectaţi aplicațiile</string>
@@ -139,7 +146,7 @@ Economisirea acumulatorului va trata selectiv aplicațiile importante."</string>
     <string name="power_dialog_screen_brightness_title">Luminozitate</string>
     <string name="power_event_user_define_title">Evenimente noi</string>
     <string name="power_event_view_event_title">Declanșări</string>
-    <string name="power_hide_mode_app_list_summary">Setări aplicaţie</string>
+    <string name="power_hide_mode_app_list_summary">Economisire acumulator în fundal</string>
     <string name="power_hide_mode_summary">Economisiţi acumulatorul prin limitarea pentru aplicații individuale a proceselor de fundal, conexiunilor Wi-Fi și datelor mobile, precum și a GPS-ului</string>
     <string name="power_hide_mode_title">Gestionare utilizare acumulator de către aplicații</string>
     <string name="power_keeper">Economisire acumulator</string>
@@ -155,6 +162,8 @@ Economisirea acumulatorului va trata selectiv aplicațiile importante."</string>
     <string name="power_optimize_activity_profile_file_error">Eroare economisire acumulator</string>
     <string name="ragment_sys_listempty">Nicio aplicație de sistem</string>
     <string name="reading">Mod Citire</string>
+    <string name="scenario_policies_summary">Economisire acumulator conform scenariului</string>
+    <string name="scenario_policies_title">Scenariu politici Economisire acumulator</string>
     <string name="screen_off">Ecranul este oprit</string>
     <string name="screen_off_10_min">Ecranul este oprit de peste 10 minute</string>
     <string name="screen_on">Ecranul este pornit</string>
@@ -163,7 +172,14 @@ Economisirea acumulatorului va trata selectiv aplicațiile importante."</string>
     <string name="set_cpufreq_max">Frecvenţă maximă a procesorului</string>
     <string name="set_lcd_mode">Modul ecranului</string>
     <string name="settings_safetylegal_activity_loading">Doar o secundă…</string>
+    <string name="show_system_app">Arată aplicațiile de sistem</string>
+    <string name="sleep_config_enhance_description">Va îmbunătăți durata acumulatorului seara</string>
+    <string name="sleep_config_enhance_title">Moduri economisire seara</string>
     <string name="still">Imagine</string>
     <string name="ui">Standard</string>
     <string name="user_define_mode">Nume</string>
+    <string name="vip_feedback">Feedback Vip</string>
+    <string name="vip_feedback_apply">Aplicați feedback Vip</string>
+    <string name="vip_feedback_apply_msg">Contactați vip-feedback-system@xiaomi.com pentru a aplica feedback Vip</string>
+  <string name="vip_feedback_enable">Activați Feedback Vip</string>
 </resources>
