--- a/Romanian/main/SecurityAdd.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SecurityAdd.apk/res/values-ro/strings.xml
@@ -23,6 +23,16 @@
     <string name="dont_bore_text">Reduceți la tăcere notificările și dezactivați butoanele pentru a nu distrage atenția de la joc</string>
     <string name="dont_bore_title">Mod Nu deranjați</string>
     <string name="empty">" "</string>
+    <string name="fastboot_locked_answer_1">Fastboot este metoda tradițională de actualizare a dispozitivelor Mi. Când telefonul este în modul Fastboot, Toate datele stocate pot fi accesate și șterse în mod direct. Am blocat modul Fastboot pentru a ne asigura că datele dumneavoastră sunt în siguranță în caz că pierdeți telefonul, dar și că funcția de Localizare telefon lucrează corect.</string>
+    <string name="fastboot_locked_answer_2">"În cazul în care vă pierdeți telefonul, Fastboot garantează securitatea elementelor stocate pe acesta. Dacă deblocați Fastboot, nu veți mai putea bloca telefonul de la distanță sau să ștergeți datele utilizând Localizarea telefonului. De aceea nu recomandăm deblocarea modului Fastboot pe telefonul dumneavoastră."</string>
+    <string name="fastboot_locked_answer_3">"Ar trebui să utilizați unealta de deblocare de pe site-ul MIUI. Pentru a debloca telefonul, trebuie să ne asigurăm că acesta este al dumneavoastră. Acesta este motivul pentru care trebuie să vă conectați la Contul Mi și să activați Localizarea telefonului."</string>
+    <string name="fastboot_locked_question_1">De ce trebuie blocat modul Fastboot?</string>
+    <string name="fastboot_locked_question_2">Există riscuri dacă deblochez modul Fastboot?</string>
+    <string name="fastboot_locked_question_3">Cunosc riscurile dar trebuie să-mi deblochez telefonul. Ce ar trebui să fac?</string>
+    <string name="fastboot_status_locked_info">"Modul Fastboot nu este deblocat pe acest dispozitiv"</string>
+    <string name="fastboot_status_locked_summary">"Nu pot obține acces Root"</string>
+    <string name="fastboot_unlock_web_home">https://unlock.update.miui.com</string>
+    <string name="fastboot_unlock_web_title">Mergeți la site-ul oficial MIUI pentru a obține unealta de deblocare.</string>
     <string name="function_close">Opriți</string>
     <string name="game_booster">Creștere viteză în jocuri</string>
     <string name="game_booster_intro">Despre creșterea vitezei în jocuri</string>
@@ -55,8 +65,9 @@
     <string name="gs_performance_mode">Mod Performanță</string>
     <string name="gs_performance_mode_detail">Creșteți utilizarea procesorului pentru a asigura o performanță crescută</string>
     <string name="i_know">Am înțeles</string>
+    <string name="install_sucess">%s instalată cu succes</string>
     <string name="intro_improve">Creșteți experiența de joc la nivel de sistem</string>
-    <string name="intro_skip">omiteți</string>
+    <string name="intro_skip">Omiteți</string>
     <string name="loading">Doar o secundă…</string>
   <string name="lucky_result_title">Plicuri roșii</string>
     <string name="main_toolbar_purchase">Adăugați</string>
@@ -82,12 +93,14 @@
     <string name="month_report_warning_dialog_description">"Pentru a vedea raportul lunar, activați această caracteristică din setările aplicației de Securitate."</string>
     <string name="month_report_warning_dialog_positive">Activați</string>
     <string name="month_report_warning_dialog_title">Raport lunar de securitate</string>
+    <string name="more_game">Mai multe jocuri</string>
     <string name="net_delay_title">Întârziere</string>
     <string name="network_not_available">"Nu se poate conecta la rețea"</string>
     <string name="no_game">"Niciun joc găsit"</string>
     <string name="no_network_btn">Încercați din nou</string>
     <string name="ok_button">OK</string>
     <string name="open_browser">Deschideți în browser</string>
+    <string name="open_game">Deschideți</string>
     <string name="other">Alte setări</string>
     <string name="pc_activity_title">Optimizare utilizare acumulator</string>
     <string name="pm_lable_name">Despre accesul root</string>
@@ -107,10 +120,13 @@
     <string name="support_game_booster_tips">Creșteți viteza și îmbunătățiți experiența de joc</string>
     <string name="sys_cpu_title">Utilizare procesor</string>
     <string name="sys_freememory_title">Disponibilă</string>
+    <string name="sys_title_gamebooster_unit_gb">GB</string>
+    <string name="sys_title_gamebooster_unit_mb">MB</string>
     <string name="title_share_link">Partajați legătura web</string>
     <string name="top_game">Jocuri de top</string>
     <string name="top_load_fail_detail">"Nu s-a putut încărca; atingeți pentru a încerca din nou"</string>
     <string name="top_no_network_detial">"Nu s-a putut încărca; verificați conexiunea la rețea și reîncercați"</string>
+    <string name="try_game">Încercați</string>
     <string name="usage_sorted_loading_text">Doar o secundă…</string>
     <string name="wlan_change_protection_detail">"Nu comuta în mod automat pe Wi-Fi atunci când se utilizează datele mobile"</string>
     <string name="wlan_change_protection_title">Preveniți comutarea între rețele</string>
