--- a/Romanian/main/SpacesPolicyApp.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SpacesPolicyApp.apk/res/values-ro/strings.xml
@@ -6,9 +6,7 @@
     <string name="btn_title_force">Forțați</string>
     <string name="choice_no">Nu</string>
     <string name="choice_yes">Da</string>
-    <string name="dialog_download_space_cancel">Renunțați</string>
-    <string name="dialog_download_space_create">OK</string>
-    <string name="dialog_download_space_title">Descărcați Spațiu?</string>
+    <string name="default_space_name">Spațiu nedenumit</string>
     <string name="dialog_password_expired_button">Actualizați parola</string>
     <string name="dialog_password_expired_message">Parola dumneavoastră fie a expirat fie nu mai este valabilă pentru politica actuală. Vă rugăm să vă actualizați parola.</string>
     <string name="dialog_password_expired_title">Parola a expirat</string>
@@ -59,6 +57,7 @@
     <string name="sscm_registration_summary">Glisați în jos notificările pentru a vedea detaliile</string>
     <string name="title_sscm_registration">Memento serviciu Secure Spaces</string>
     <string name="toast_space_creation_failed">Nu s-a putut crea spațiul</string>
+    <string name="unknown"> (Necunoscut)</string>
     <string name="uri_invalid">URL-ul sau codul QR nu descrie un Spațiu sigur</string>
   <string name="uri_invalid_server_url">Invalid server URL in registration URI</string>
   <string name="uri_missing_registration_token">Empty or missing registration token in registration URI</string>
